<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    tools:context="de.crazyinfo.fpe_rechner.FoodShowActivity">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_material_dark"
            android:elevation="4dp"
            android:theme="@style/toolbar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <LinearLayout
            android:layout_below="@id/toolbar"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="90"
                android:weightSum="100">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="49"
                    android:weightSum="4">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textViewFoodDatabaseTitle"
                        android:textColor="#b5e61d"
                        android:textStyle="bold"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textViewFoodDatabaseDescription"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp" />
                    <ListView
                        android:id="@+id/listViewFood"
                        android:layout_width="match_parent"
                        android:divider="#b5e61d"
                        android:dividerHeight="1dp"
                        android:layout_height="0dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="4"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="49"
                    android:weightSum="4">

                    <TextView
                        android:id="@+id/textViewManageFoodSettings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/buttons"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.07"
                        android:textColor="#b5e61d"
                        android:textStyle="bold"
                        android:text="@string/textViewManageFoodSettings" />

                    <LinearLayout
                        android:id="@+id/buttonsSettings"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/textViewManageFoodSettings">

                        <Button
                            android:id="@+id/buttonImport"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="40"
                            android:elevation="10dp"
                            android:text="@string/buttonImport" />

                        <Button
                            android:id="@+id/buttonExport"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="40"
                            android:elevation="10dp"
                            android:text="@string/buttonExport" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:text="@string/textViewFoodTitle"
                        android:textColor="#b5e61d"
                        android:textStyle="bold"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/textViewFoodDescription"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp" />

                    <ListView
                        android:id="@+id/addListFood"
                        android:layout_width="match_parent"
                        android:divider="#b5e61d"
                        android:dividerHeight="1dp"
                        android:layout_height="0dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="4"/>

                    <Button
                        android:id="@+id/buttonAccept"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/buttonAccept"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

</LinearLayout>