<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_material_dark"
        android:elevation="4dp"
        android:theme="@style/toolbar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <TextView
        android:text="@string/textViewNote"
        android:id="@+id/textViewNote"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.07"
        android:layout_below="@+id/toolbar"
        android:layout_alignLeft="@+id/editTextCho"
        android:layout_alignStart="@+id/editTextCho"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <EditText
        android:hint="@string/editTextCho"
        android:id="@+id/editTextCho"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:backgroundTint="#b5e61d"
        android:imeOptions="actionNext"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textViewNote"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <EditText
        android:hint="@string/editTextKcal"
        android:id="@+id/editTextKcal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:backgroundTint="#b5e61d"
        android:imeOptions="actionNext"
        android:layout_below="@+id/editTextCho"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" />

    <EditText
        android:hint="@string/editTextFactor"
        android:id="@+id/editTextFactor"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:backgroundTint="#b5e61d"
        android:imeOptions="actionDone"
        android:layout_below="@+id/editTextKcal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp" />

    <Button
        android:text="@string/buttonCalc"
        android:id="@+id/buttonCalc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:allowUndo="true"
        style="@android:style/Widget.Material.Button"
        android:layout_below="@+id/editTextFactor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:elevation="10dp" />

    <TextView
        android:textIsSelectable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:id="@+id/textViewResult"
        android:layout_below="@+id/buttonCalc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:padding="20dp" />

</RelativeLayout>